Database added and methods implemented
