# api/controllers/people.js
@@ -1,64 +1,53 @@
-﻿'use strict';
+﻿(function (people) {
 
-module.exports = { save_people, update_people, get_people, get_all_people, delete_people };
+    var data = require('../../data');
 
-//POST /user operationId
-function save_people(req, res, next) {
-    var people = req.body;
-    res.json({ success: 1, description: "People added" });
-}
+    people.save_people = function(req, res, next) {
+        var person = req.body;
+        res.setHeader('Content-Type', 'application/json');
+        data.addPerson(person, function (err, personSaved) {
+            if (err) {
+                var ret_err = {
+                    "message": err
+                };
+                res.status(500).send(ret_err);
+            }
+            else {
+                console.log(personSaved);
+                res.json({ success: 1, description: "Person added" });
+            }
+        });
+    }
 
-//PUT /movie/{id} operationId
-function update_people(req, res, next) {
-    var id = req.swagger.params.id.value; //req.swagger contains the path parameters
-    var user = req.body;
+    people.get_people_by_type = function (req, res, next) {
+        var type = req.swagger.params.type.value;
+        data.getPeopleByType(type, function (err, people) {
+            res.setHeader('Content-Type', 'application/json');
+            if (err) {
+                var ret_err = {
+                    "message": err
+                };
+                res.status(500).send(ret_err);
+            }
+            else {
+                res.send(people);
+            }
+        });
+    }
 
-    res.json({ success: 1, description: "People updated" });
+    people.get_all_people = function(req, res, next) {
+        data.getAllPeople(function (err, people) {
+            res.setHeader('Content-Type', 'application/json');
+            if (err) {
+                var ret_err = {
+                    "message": err
+                };
+                res.status(500).send(ret_err);
+            }
+            else {
+                res.send(people);
+            }
+        });
+    }
 
-}
-
-//GET /movie/{id} operationId
-function get_people(req, res, next) {
-    var id = req.swagger.params.id.value; //req.swagger contains the path parameters
-    var people = {
-        id: "123",
-        name: "Michelle",
-        lastname: "Obama",
-        occupation: "First lady",
-        isreal: "true",
-        from: "",
-        personalitytype: "INTJ"
-    };
-    res.json(people);
-}
-
-//GET /personality operationId
-function get_all_people(req, res, next) {
-    var people = [
-        {
-            id: "123",
-            name: "Michelle",
-            lastname: "Obama",
-            occupation: "First lady",
-            isreal: "true",
-            from: "",
-            personalitytype: "INTJ"
-        },
-        {
-            id: "233",
-            name: "Stephen",
-            lastname: "Hawking",
-            occupation: "Physisist",
-            isreal: "true",
-            from: "",
-            personalitytype: "INTJ"
-        }
-    ];
-    res.json(people);
-}
-
-//DELETE /movie/{id} operationId
-function delete_people(req, res, next) {
-    var id = req.swagger.params.id.value;
-    res.json({ success: 1, description: "People deleted!" });
-}
+})(module.exports);
