# api/controllers/user.js
@@ -1,50 +1,82 @@
-﻿'use strict';
+﻿
+(function (user) {
+    
+    var auth = require('../../auth');
+    var data = require('../../data');
 
-// Include our "db"
-//var db = require('../../config/db')();
-// Exports all the functions to perform on the db
-module.exports = { save_user, update_user, get_user, delete_user };
+    user.save_user = function(req, res, next) {
+        var user = req.body;
+        auth.register(user, function (err, createduser) {
+            res.setHeader('Content-Type', 'application/json');
+            if(err){
+                var ret_err = {
+                    "message": err
+                }; 
+                res.status(500).send(ret_err); 
+            }
+            else{  
+                console.log(createduser); 
+                res.send(createduser); 
+            }
+        }); 
+    }
 
-//POST /user operationId
-function save_user(req, res, next) {
-    var user = req.body;
-    res.json({ success: 1, description: "User added to the list!" });
-}
+    user.update_user = function (req, res, next) {
+        var username = req.swagger.params.username.value;
+        var user = req.body; //name and lastname
+        console.log(username);
+        console.log(user);
+        data.updateUser(username, user, function (err, updateduser) {
+            res.setHeader('Content-Type', 'application/json');
+            if (err) {
+                var ret_err = {
+                    "message": err
+                };
+                res.status(500).send(ret_err);
+            }
+            else {
+                res.json({ success: 1, description: "User updated" });
+            }
+        });
+    }
 
-//PUT /movie/{id} operationId
-function update_user(req, res, next) {
-    var id = req.swagger.params.id.value; //req.swagger contains the path parameters
-    var user = req.body;
-    //Update user 
+    user.get_user = function (req, res, next) {
+        var username = req.swagger.params.username.value;
+        console.log(username);
+        data.getUser(username, function (err, user) {
+            if (err) {
+                var ret_err = {
+                    "message": err
+                };
+                res.status(500).send(ret_err);
+            }
+            else {
+                console.log(user);
+                res.send(user);
+            }
+        }); 
+    }
 
-    //if (db.update(id, movie)) {
-    //    res.json({ success: 1, description: "Movie updated!" });
-    //} else {
-    //    res.status(204).send();
-    //}
-    res.json({success: 1, description: "User updated"});
+    user.delete_user = function (req, res, next) {
+        var username = req.swagger.params.username.value;
+        res.setHeader('Content-Type', 'application/json');
+        res.json({ success: 1, description: "Delete user, not implemented yet!" });
+    }
 
-}
-
-//GET /movie/{id} operationId
-function get_user(req, res, next) {
-    var id = req.swagger.params.id.value; //req.swagger contains the path parameters
-    var user = { id: "123", email: "me@mail.com", password: "KJALDKLASDKLJA123KJ"}; //db.find(id);
-    //if (movie) {
-    //    res.json(movie);
-    //} else {
-    //    res.status(204).send();
-    //}
-    res.json(user); 
-}
-
-//DELETE /movie/{id} operationId
-function delete_user(req, res, next) {
-    var id = req.swagger.params.id.value; //req.swagger contains the path parameters
-    //if (db.remove(id)) {
-    //    res.json({ success: 1, description: "Movie deleted!" });
-    //} else {
-    //    res.status(204).send();
-    //}
-    res.json({ success: 1, description: "User deleted!" });
-}
+    user.user_signin = function (req, res, next) {
+        var user_creds = req.body;
+        auth.checkuser(req.body.email, req.body.password, function (err, user) {
+            res.setHeader('Content-Type', 'application/json');
+            if (err) {
+                var ret_err = {
+                    "message": "User validation failed"
+                };
+                res.status(500).send(ret_err);
+            }
+            else {
+                console.log(user);
+                res.send(user);
+            }
+        });
+    }
+})(module.exports);
