# api/controllers/user_traits.js
@@ -1,52 +1,40 @@
-﻿'use strict';
+﻿(function (usertraits) {
 
-module.exports = { save_user_traits, update_user_traits, get_user_traits, delete_user_traits };
+    var data = require('../../data');
 
-//POST /user operationId
-function save_user_traits(req, res, next) {
-    var user_traits = req.body;
-    res.json({ success: 1, description: "User type part added" });
-}
-
-//PUT /movie/{id} operationId
-function update_user_traits(req, res, next) {
-    var userid = req.swagger.params.userid.value; //req.swagger contains the path parameters
-    var user = req.body;
-
-    res.json({ success: 1, description: "User type part updated" });
-
-}
-
-//GET /movie/{id} operationId
-function get_user_traits(req, res, next) {
-    var userid = req.swagger.params.userid.value; //req.swagger contains the path parameters
-    var user_traits = {
-        userid: "123",
-        traits: [
-            {
-                trait: "Trustworthy",
-                isme: "true",
-            },
-            {
-                trait: "Lojal",
-                isme: "true",
-            },
-            {
-                trait: "Friendly",
-                isme: "false",
+    usertraits.save_user_traits = function(req, res, next) {
+        var user_traits = req.body;
+        res.setHeader('Content-Type', 'application/json');
+        data.addUserTraits(user_traits.username, user_traits.traits, function (err) {
+            if (err) {
+                var ret_err = {
+                    "message": err
+                };
+                res.status(500).send(ret_err);
             }
-        ]
-    };
-    res.json(user_traits);
-}
+            else {
+                res.json({ success: 1, description: "User traits added" });
+            }
+        });
+        
+    }
 
-//DELETE /movie/{id} operationId
-function delete_user_traits(req, res, next) {
-    var userid = req.swagger.params.userid.value; //req.swagger contains the path parameters
-    //if (db.remove(id)) {
-    //    res.json({ success: 1, description: "Movie deleted!" });
-    //} else {
-    //    res.status(204).send();
-    //}
-    res.json({ success: 1, description: "User type part deleted!" });
-}
+    usertraits.update_user_traits = function(req, res, next) {
+        var username = req.swagger.params.username.value;
+        var user = req.body;
+
+        res.json({ success: 1, description: "Not yet implemented" });
+
+    }
+
+    usertraits.get_user_traits = function(req, res, next) {
+        var username = req.swagger.params.username.value;
+        res.json({ success: 1, description: "Not yet implemented" });
+    }
+
+    usertraits.delete_user_traits = function(req, res, next) {
+        var username = req.swagger.params.username.value; 
+        res.json({ success: 1, description: "Not yet implemented" });
+    }
+
+})(module.exports);
