# api/controllers/user_type_part.js
@@ -1,57 +1,38 @@
-﻿'use strict';
+﻿(function (usertypepart) {
 
-// Include our "db"
-//var db = require('../../config/db')();
-// Exports all the functions to perform on the db
-module.exports = { save_user_type_part, update_user_type_part, get_user_type_part, delete_user_type_part };
+    var data = require('../../data');
 
-//POST /user operationId
-function save_user_type_part(req, res, next) {
-    var user_type_part = req.body; 
-    res.json({ success: 1, description: "User type part added" });
-}
-
-//PUT /movie/{id} operationId
-function update_user_type_part(req, res, next) {
-    var userid = req.swagger.params.userid.value; //req.swagger contains the path parameters
-    var user = req.body;
-    
-    res.json({ success: 1, description: "User type part updated" });
-
-}
-
-//GET /movie/{id} operationId
-function get_user_type_part(req, res, next) {
-    var userid = req.swagger.params.userid.value; //req.swagger contains the path parameters
-    var user_type_part = {
-        userid: "123", typepercentage: [
-            {
-                type: "INTJ",
-                percentage: "98",
-                lastupdate: "2016-09-30T07:32:48.545Z"
-            },
-            {
-                type: "ESFJ",
-                percentage: "12",
-                lastupdate: "2016-09-30T07:32:48.545Z"
-            },
-            {
-                type: "INFJ",
-                percentage: "64",
-                lastupdate: "2016-09-30T07:32:48.545Z"
+    usertypepart.save_user_type_part = function(req, res, next) {
+        var user_type_part = req.body;
+        res.setHeader('Content-Type', 'application/json');
+        data.addUserTypeParts(user_type_part.username, user_type_part.type_percentage, function (err) {
+            if (err) {
+                var ret_err = {
+                    "message": err
+                };
+                res.status(500).send(ret_err);
             }
-        ]
-    };
-    res.json(user_type_part);
-}
+            else {
+                res.json({ success: 1, description: "User type part added" });
+            }
+        });
+        
+    }
 
-//DELETE /movie/{id} operationId
-function delete_user_type_part(req, res, next) {
-    var userid = req.swagger.params.userid.value; //req.swagger contains the path parameters
-    //if (db.remove(id)) {
-    //    res.json({ success: 1, description: "Movie deleted!" });
-    //} else {
-    //    res.status(204).send();
-    //}
-    res.json({ success: 1, description: "User type part deleted!" });
-}
+    usertypepart.update_user_type_part = function(req, res, next) {
+        var username = req.swagger.params.username.value;
+        var user = req.body;
+        res.json({ success: 1, description: "Not yet implemented" });
+    }
+
+    usertypepart.get_user_type_part = function(req, res, next) {
+        var username = req.swagger.params.username.value;
+        res.json({ success: 1, description: "Not yet implemented" });
+    }
+
+    usertypepart.delete_user_type_part = function(req, res, next) {
+        var username = req.swagger.params.username.value; 
+        res.json({ success: 1, description: "Not yet implemented" });
+    }
+
+})(module.exports);
